# my-test-repo

./: .flake8_nb  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: main.yml
docs/: conf.py  index.rst  installation.md  readme.md
docs/source/: conf.py  index.rst  license.md  modules.rst  my_bad_module.rst  myteam.rst
myteam/: __init__.py
myteam/test/: test_statistical.py  test_transform4.py
src/: circle.ipynb  input_output.py  main.py  my_bad_module.py  notebook_team0.ipynb  notebook_unit1.ipynb
src/myteam/: __init__.py  numerical.py  statistical.py
src/myteam/test/: test_statistical.py
src/test/: numerical.py  pytest.ini  test_numerical.py  test_numerical2.py  test_numerical3.py  test_numerical5_parametric.py  test_transform3.py  transform.py
