[metadata]
name = myteam
version = 0.0.1
author = Inga Ulusoy
author_email = inga.ulusoy@uni-heidelberg.de
description = myteam data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iulusoy/my-test-repo
project_urls =
  Bug Tracker = https://github.com/iulusoy/my-test-repo/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src